--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <title>registration and login</title>
     <style>
+        * {
+            margin: 0;
+        }
         body {
             margin: 0%;
             
@@ -11,10 +14,12 @@
 
 
         #header {
-            background-color: blueviolet;
+            background-color: darkred;
             padding: 0.7cm;
+            border-bottom: black solid 2px;
+            border-top: black solid 2px;
 
-            color: black;
+            color: white;
             text-align: center;
 
         }
@@ -33,12 +38,15 @@
         .register {
             text-align: center;
             height: 10cm;
+            padding-top: 0.1cm;
             background-color: wheat;
         }
 
         .signin {
             text-align: center;
             background-color: wheat;
+            margin: auto;
+            padding: auto;
         }
     </style>
 </head>
@@ -49,7 +57,11 @@
             <h1 style="font-family: cursive;">Welcome to my Registration Page</h1>
         </div>
         <div class="register">
-            <h1>Register</h1>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br><h1>Registration for new account</h1>
             <p>Please fill in this form to create an account.</p>
             <hr>
             <label for="email"><b>Email</b></label>
